@@ -382,22 +382,6 @@ name|solr
 operator|.
 name|common
 operator|.
-name|params
-operator|.
-name|ModifiableSolrParams
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
 name|util
 operator|.
 name|FastWriter
@@ -431,6 +415,22 @@ operator|.
 name|core
 operator|.
 name|*
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|component
+operator|.
+name|SearchHandler
 import|;
 end_import
 
@@ -1427,6 +1427,45 @@ operator|.
 name|BAD_REQUEST
 argument_list|,
 literal|"unknown handler: "
+operator|+
+name|qt
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+name|qt
+operator|!=
+literal|null
+operator|&&
+name|qt
+operator|.
+name|startsWith
+argument_list|(
+literal|"/"
+argument_list|)
+operator|&&
+operator|!
+operator|(
+name|handler
+operator|instanceof
+name|SearchHandler
+operator|)
+condition|)
+block|{
+comment|//For security reasons it's a bad idea to allow a leading '/', ex: /select?qt=/update see SOLR-3161
+comment|//There was no restriction from Solr 1.4 thru 3.5 and it's now only supported for SearchHandlers.
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
+argument_list|,
+literal|"Invalid query type.  Do not use /select to access: "
 operator|+
 name|qt
 argument_list|)
