@@ -120,6 +120,24 @@ name|client
 operator|.
 name|solrj
 operator|.
+name|request
+operator|.
+name|QueryRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
 name|response
 operator|.
 name|QueryResponse
@@ -136,7 +154,7 @@ name|solr
 operator|.
 name|common
 operator|.
-name|SolrInputDocument
+name|SolrException
 import|;
 end_import
 
@@ -148,9 +166,9 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|util
+name|common
 operator|.
-name|ExternalPaths
+name|SolrInputDocument
 import|;
 end_import
 
@@ -267,11 +285,10 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+comment|//this one has handleSelect=true which a test here needs
 name|createJetty
 argument_list|(
-name|ExternalPaths
-operator|.
-name|EXAMPLE_HOME
+literal|"solr/"
 argument_list|,
 literal|null
 argument_list|,
@@ -311,7 +328,7 @@ name|addField
 argument_list|(
 literal|"id"
 argument_list|,
-literal|"xxxx"
+literal|"1234"
 argument_list|)
 expr_stmt|;
 name|server1
@@ -418,7 +435,7 @@ name|content
 operator|.
 name|contains
 argument_list|(
-literal|"xxxx"
+literal|"1234"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -554,6 +571,128 @@ argument_list|)
 expr_stmt|;
 comment|//still there
 block|}
+comment|/** SOLR-3161    * Technically stream.body isn't remote streaming, but there wasn't a better place for this test method. */
+annotation|@
+name|Test
+argument_list|(
+name|expected
+operator|=
+name|SolrException
+operator|.
+name|class
+argument_list|)
+DECL|method|testQtUpdateFails
+specifier|public
+name|void
+name|testQtUpdateFails
+parameter_list|()
+throws|throws
+name|SolrServerException
+block|{
+name|SolrQuery
+name|query
+init|=
+operator|new
+name|SolrQuery
+argument_list|()
+decl_stmt|;
+name|query
+operator|.
+name|setQuery
+argument_list|(
+literal|"*:*"
+argument_list|)
+expr_stmt|;
+comment|//for anything
+name|query
+operator|.
+name|add
+argument_list|(
+literal|"echoHandler"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+comment|//sneaky sneaky
+name|query
+operator|.
+name|add
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"/update"
+argument_list|)
+expr_stmt|;
+name|query
+operator|.
+name|add
+argument_list|(
+literal|"stream.body"
+argument_list|,
+literal|"<delete><query>*:*</query></delete>"
+argument_list|)
+expr_stmt|;
+name|QueryRequest
+name|queryRequest
+init|=
+operator|new
+name|QueryRequest
+argument_list|(
+name|query
+argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|public
+name|String
+name|getPath
+parameter_list|()
+block|{
+comment|//don't let superclass substitute qt for the path
+return|return
+literal|"/select"
+return|;
+block|}
+block|}
+decl_stmt|;
+name|QueryResponse
+name|rsp
+init|=
+name|queryRequest
+operator|.
+name|process
+argument_list|(
+name|getSolrServer
+argument_list|()
+argument_list|)
+decl_stmt|;
+comment|//!! should *fail* above for security purposes
+name|String
+name|handler
+init|=
+operator|(
+name|String
+operator|)
+name|rsp
+operator|.
+name|getHeader
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"handler"
+argument_list|)
+decl_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+name|handler
+argument_list|)
+expr_stmt|;
+block|}
 comment|/** Compose a url that if you get it, it will delete all the data. */
 DECL|method|makeDeleteAllUrl
 specifier|private
@@ -614,7 +753,7 @@ name|query
 operator|.
 name|setQuery
 argument_list|(
-literal|"id:xxxx"
+literal|"id:1234"
 argument_list|)
 expr_stmt|;
 name|QueryResponse
